// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Podcast Promo Card Content should match snapshot 1`] = `
.emotion-0 {
  padding: 0.5rem;
  display: inline-block;
  max-width: calc(100% - 96px);
}

@media (min-width:25rem) {
  .emotion-0 {
    padding: 0.5rem 1rem;
    max-width: calc(100% - 117px);
  }
}

@media (min-width:37.5rem) {
  .emotion-0 {
    padding: 0.5rem 1rem;
    max-width: calc(100% - 178px);
  }
}

@media (min-width:63rem) {
  .emotion-0 {
    padding: 1rem;
    max-width: initial;
  }
}

<div>
  <div
    class="emotion-0 emotion-1"
  >
    Content
  </div>
</div>
`;

exports[`Podcast Promo Card Description should match snapshot 1`] = `
.emotion-0 {
  font-size: 0.9375rem;
  line-height: 1.125rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  max-width: 30rem;
  color: #6E6E73;
  margin-top: 0.5rem;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .emotion-0 {
    font-size: 0.9375rem;
    line-height: 1.125rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-0 {
    font-size: 0.875rem;
    line-height: 1.125rem;
  }
}

<div>
  <p
    class="emotion-0 emotion-1"
  >
    Content
  </p>
</div>
`;

exports[`Podcast Promo Card Image should match snapshot 1`] = `
.emotion-0 {
  width: 88px;
  display: inline-block;
  vertical-align: top;
  margin: 8px 0 0 8px;
}

@media (min-width:25rem) {
  .emotion-0 {
    width: 109px;
  }
}

@media (min-width:37.5rem) {
  .emotion-0 {
    width: 178px;
    margin: 0;
  }
}

@media (min-width:63rem) {
  .emotion-0 {
    width: 100%;
    margin: 0;
  }
}

<div>
  <figure
    class="emotion-0 emotion-1"
  >
    Content
  </figure>
</div>
`;

exports[`Podcast Promo Card Link should match snapshot 1`] = `
.emotion-0 {
  color: unset;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-0:before {
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  content: '';
  overflow: hidden;
  z-index: 1;
}

.emotion-0:visited .podcast-promo--visited {
  color: #AEAEB5;
}

.emotion-0:focus .podcast-promo--focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

<div>
  <a
    class="emotion-0 emotion-1"
    href="https://www.bbc.com"
  >
    Content
  </a>
</div>
`;

exports[`Podcast Promo Card Title should match snapshot 1`] = `
.emotion-0 {
  font-size: 0.9375rem;
  line-height: 1.25rem;
  font-family: ReithSerif,Helvetica,Arial,sans-serif;
  font-weight: 500;
  font-style: normal;
  margin-top: 0;
  margin-bottom: 0.5rem;
  color: #222222;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .emotion-0 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-0 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

<div>
  <h3
    class="emotion-0 emotion-1"
  >
    Content
  </h3>
</div>
`;

exports[`Podcast Promo Card should match snapshot 1`] = `
.emotion-0 {
  position: relative;
  background-color: #FFFFFF;
}

.emotion-0:hover .podcast-promo--hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

<div>
  <div
    class="emotion-0 emotion-1"
  >
    Content
  </div>
</div>
`;

exports[`Podcast Promo Examples basic example 1`] = `
.emotion-4 {
  margin: 0 0 1rem;
}

.emotion-0 > svg {
  margin-left: 0;
  width: 22px;
  height: 22px;
  fill: currentColor;
  position: relative;
  bottom: 5px;
  right: 3px;
}

.emotion-2 {
  font-size: 1.125rem;
  line-height: 1.375rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  display: inline;
  color: #222222;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .emotion-2 {
    font-size: 1.125rem;
    line-height: 1.375rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-2 {
    font-size: 1.25rem;
    line-height: 1.5rem;
  }
}

.emotion-22 {
  padding: 0.5rem;
  display: inline-block;
  max-width: calc(100% - 96px);
}

@media (min-width:25rem) {
  .emotion-22 {
    padding: 0.5rem 1rem;
    max-width: calc(100% - 117px);
  }
}

@media (min-width:37.5rem) {
  .emotion-22 {
    padding: 0.5rem 1rem;
    max-width: calc(100% - 178px);
  }
}

@media (min-width:63rem) {
  .emotion-22 {
    padding: 1rem;
    max-width: initial;
  }
}

.emotion-14 {
  font-size: 0.9375rem;
  line-height: 1.25rem;
  font-family: ReithSerif,Helvetica,Arial,sans-serif;
  font-weight: 500;
  font-style: normal;
  margin-top: 0;
  margin-bottom: 0.5rem;
  color: #222222;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .emotion-14 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-14 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

.emotion-16 {
  font-size: 0.9375rem;
  line-height: 1.125rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  max-width: 30rem;
  color: #6E6E73;
  margin-top: 0.5rem;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .emotion-16 {
    font-size: 0.9375rem;
    line-height: 1.125rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-16 {
    font-size: 0.875rem;
    line-height: 1.125rem;
  }
}

.emotion-8 {
  width: 88px;
  display: inline-block;
  vertical-align: top;
  margin: 8px 0 0 8px;
}

@media (min-width:25rem) {
  .emotion-8 {
    width: 109px;
  }
}

@media (min-width:37.5rem) {
  .emotion-8 {
    width: 178px;
    margin: 0;
  }
}

@media (min-width:63rem) {
  .emotion-8 {
    width: 100%;
    margin: 0;
  }
}

.emotion-12 {
  color: unset;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-12:before {
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  content: '';
  overflow: hidden;
  z-index: 1;
}

.emotion-12:visited .podcast-promo--visited {
  color: #AEAEB5;
}

.emotion-12:focus .podcast-promo--focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-18 > svg {
  width: 16px;
  height: 16px;
  fill: currentColor;
  position: relative;
  bottom: 2px;
  right: 3px;
}

.emotion-20 {
  font-size: 0.9375rem;
  line-height: 1.25rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  color: #6E6E73;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .emotion-20 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-20 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

.emotion-24 {
  position: relative;
  background-color: #FFFFFF;
}

.emotion-24:hover .podcast-promo--hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-26 {
  background-color: #F2F2F2;
  padding: 1rem;
}

.emotion-6 {
  position: relative;
  height: 0;
  overflow: hidden;
  background-color: #F2F2F2;
  background-position: center center;
  background-repeat: no-repeat;
  background-size: 60px 17px;
  padding-bottom: 100%;
  width: 100%;
  background-image: url(data:image/svg+xml;base64,PD94bWwgdmVyc2lvbj0iMS4wIiBlbmNvZGluZz0iVVRGLTgiPz48c3ZnIHdpZHRoPSI0NzkiIGhlaWdodD0iMTM2IiB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciPjxnIGZpbGw9Im5vbmUiIGZpbGwtcnVsZT0iZXZlbm9kZCI+PGcgZmlsbD0iI0Q1RDBDRCI+PGc+PHBhdGggZD0iTTQ0OS41NTYgOTEuNTUzbC0yLjMxIDEuNDFjLTExLjE2NyA2LjgxOC0yMy4zMTMgMTAuNDc0LTM0LjM0NiAxMC40Ny0yMy42MS0uMDktMzkuMTYzLTE0LjA4My0zOS4yMjctMzQuNDUzLjAzLTE5LjkxOCAxNi4yNy0zNC42NjMgMzguNjMzLTM0LjcxOCAxMS4zODcuMDEgMjEuNzAzIDIuOTU0IDMzLjk2MiA5LjY3MmwyLjI1MSAxLjI0di0xOC4xOWwtLjk2Mi0uMzc3Yy0xMy44MjQtNS40NTgtMjQuNTMtNy44OS0zNS4xMDMtNy44ODQtMTYuMzQ2LS4wMDYtMzAuNTMzIDUuMzk0LTQwLjYzNyAxNC41NTctMTAuMTA1IDkuMTYzLTE2LjEwNiAyMi4xMDItMTYuMDk5IDM2Ljk1My4wMDggMTAuMzQ4IDQuMjc5IDIyLjQ4IDEzLjQyIDMyLjEwNSA5LjEyMSA5LjYyOCAyMy4xNjUgMTYuNjQ4IDQyLjQzIDE2LjYzOWguMDYzYzE1Ljk4IDAgMjcuMDYyLTMuNTYzIDM3LjA3NC04LjQ5MmwuODUxLS40MTRWOTEuNTUzek0zMzQgMTM1LjY5N2gxNDQuMTk1VjBIMzM0djEzNS42OTd6Ii8+PHBhdGggZD0iTTI3Ni45MzcgODkuOTY4Yy4wNDEtMTIuMzMtOC4xNzEtMjEuNjk2LTIxLjMwOC0yNS4zIDMuNTQ0LTEuODA5IDYuMzUtNC4wMjMgOC40MDQtNi43MjcgMi43NS0zLjYyMiA0LjA2MS04LjA2NCA0LjA0Ni0xMy4yMzUuMDE1LTYuMzU5LTIuNDg2LTEyLjgzOS03Ljg1OC0xNy42ODctNS4zNzItNC44NDctMTMuNTI2LTcuOTk3LTI0LjY1NC03Ljk5MUgyMDQuODN2OTcuNzI4aDM2LjA3M2MxMi44NyAwIDIxLjkwNi0zLjQ4MiAyNy43MjItOC42NSA1LjgxOC01LjE1NSA4LjMyLTExLjkxIDguMzEyLTE4LjEzOHpNMTY3IDEzNS42OThoMTQ0LjE5N1YwSDE2N3YxMzUuNjk3eiIvPjxwYXRoIGQ9Ik0xMDkuOTM3IDg5Ljk2OGMuMDQxLTEyLjMzLTguMTcxLTIxLjY5Ni0yMS4zMDgtMjUuMyAzLjU0NC0xLjgwOSA2LjM1LTQuMDIzIDguNDA0LTYuNzI3IDIuNzUtMy42MjIgNC4wNjEtOC4wNjQgNC4wNDYtMTMuMjM1LjAxNS02LjM1OS0yLjQ4Ni0xMi44MzktNy44NTgtMTcuNjg3LTUuMzcyLTQuODQ3LTEzLjUyNi03Ljk5Ny0yNC42NTQtNy45OTFIMzcuODN2OTcuNzI4aDM2LjA3M2MxMi44NyAwIDIxLjkwNi0zLjQ4MiAyNy43MjItOC42NSA1LjgxOC01LjE1NSA4LjMyLTExLjkxIDguMzEyLTE4LjEzOHpNMCAxMzUuNjk4aDE0NC4xOTdWMEgwdjEzNS42OTd6Ii8+PHBhdGggZD0iTTI1OC42NjIgODguMTk4Yy0uMDEzIDMuMjI5LTEuMDA3IDYuNDc1LTMuODk2IDkuMDExLTIuODg0IDIuNTM3LTcuODczIDQuNDYzLTE2LjEzMyA0LjQ2M0gyMjJWNzVoMTUuODkzYzcuNDExIDAgMTIuNjcgMS41MDIgMTUuOTY1IDMuODUgMy4yODkgMi4zNjIgNC43NzYgNS40NjMgNC44MDQgOS4zNDgiLz48cGF0aCBkPSJNOTEuNjYyIDg4LjE5OGMtLjAxMyAzLjIyOS0xLjAwNyA2LjQ3NS0zLjg5NiA5LjAxMS0yLjg4NCAyLjUzNy03Ljg3NCA0LjQ2My0xNi4xMzMgNC40NjNINTVWNzVoMTUuODkyYzcuNDEyIDAgMTIuNjcyIDEuNTAyIDE1Ljk2NiAzLjg1IDMuMjg5IDIuMzYyIDQuNzc2IDUuNDYzIDQuODA0IDkuMzQ4Ii8+PHBhdGggZD0iTTI0NS4xODYgNTUuNzljMy4wOTYtMi4yMzcgNC41OS01LjM4NiA0LjYxMy0xMC4xMjQtLjAxNS0zLjI1LS45NDMtNi4wMzMtMy4yODEtOC4xMTEtMi4zNDYtMi4wNzgtNi4zMy0zLjU1NS0xMi43NTQtMy41NTVIMjIydjI1LjI3NWg4LjA3NmM2Ljk4OC4wMDQgMTEuOTk4LTEuMjQzIDE1LjExLTMuNDg2Ii8+PHBhdGggZD0iTTc4LjE4NiA1NS43OWMzLjA5Ni0yLjIzNyA0LjU5LTUuMzg2IDQuNjEzLTEwLjEyNC0uMDE1LTMuMjUtLjk0My02LjAzMy0zLjI4Mi04LjExMUM3Ny4xNzIgMzUuNDc3IDczLjE4OCAzNCA2Ni43NjQgMzRINTV2MjUuMjc1aDguMDc2YzYuOTg4LjAwNCAxMS45OTgtMS4yNDMgMTUuMTEtMy40ODYiLz48L2c+PC9nPjwvZz48L3N2Zz4K);
}

@media (min-width:25rem) {
  .emotion-6 {
    background-size: 77px 22px;
  }
}

@media (min-width:63rem) {
  .emotion-6 {
    background-size: 93px 27px;
  }
}

.emotion-10 {
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
  margin: 0;
}

<div>
  <section
    class="emotion-26 emotion-27"
    role="region"
  >
    <div
      class="emotion-4 emotion-5"
    >
      <i
        class="emotion-0 emotion-1"
      />
      <h2
        class="emotion-2 emotion-3"
      >
        Подкаст
      </h2>
    </div>
    <div
      class="emotion-24 emotion-25"
    >
      <figure
        class="emotion-8 emotion-9"
      >
        <div
          class="emotion-6 emotion-7"
        >
          <img
            alt="Что это было?"
            src="http://ichef.bbci.co.uk/images/ic/3000x3000/p0776f5z.jpg"
            width="100%"
          />
        </div>
      </figure>
      <div
        class="emotion-22 emotion-23"
      >
        <h3
          class="emotion-14 emotion-15"
        >
          <a
            class="emotion-12 emotion-13"
            href="https://www.bbc.com/russian/media-47937790"
          >
            <span
              class="podcast-promo--hover podcast-promo--focus podcast-promo--visited"
            >
              Что это было?
            </span>
            <span
              class="emotion-10 emotion-11"
            >
              , Episodes
            </span>
          </a>
        </h3>
        <p
          class="emotion-16 emotion-17"
        >
          Мы быстро, просто и понятно объясняем, что случилось, почему это важно и что будет дальше. Никаких ненужных подробностей и передергиваний - только факты и взвешенная аналитика.
        </p>
        <span
          aria-hidden="true"
        >
          <i
            class="emotion-18 emotion-19"
          />
          <span
            class="emotion-20 emotion-21"
          >
            эпизоды
          </span>
        </span>
      </div>
    </div>
  </section>
</div>
`;

exports[`Podcast Promo Examples on-page example 1`] = `
.emotion-10 {
  margin: 0 0 1rem;
}

.emotion-6 > svg {
  margin-left: 0;
  width: 22px;
  height: 22px;
  fill: currentColor;
  position: relative;
  bottom: 5px;
  right: 3px;
}

.emotion-8 {
  font-size: 1.125rem;
  line-height: 1.375rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  display: inline;
  color: #222222;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .emotion-8 {
    font-size: 1.125rem;
    line-height: 1.375rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-8 {
    font-size: 1.25rem;
    line-height: 1.5rem;
  }
}

.emotion-28 {
  padding: 0.5rem;
  display: inline-block;
  max-width: calc(100% - 96px);
}

@media (min-width:25rem) {
  .emotion-28 {
    padding: 0.5rem 1rem;
    max-width: calc(100% - 117px);
  }
}

@media (min-width:37.5rem) {
  .emotion-28 {
    padding: 0.5rem 1rem;
    max-width: calc(100% - 178px);
  }
}

@media (min-width:63rem) {
  .emotion-28 {
    padding: 1rem;
    max-width: initial;
  }
}

.emotion-20 {
  font-size: 0.9375rem;
  line-height: 1.25rem;
  font-family: ReithSerif,Helvetica,Arial,sans-serif;
  font-weight: 500;
  font-style: normal;
  margin-top: 0;
  margin-bottom: 0.5rem;
  color: #222222;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .emotion-20 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-20 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

.emotion-22 {
  font-size: 0.9375rem;
  line-height: 1.125rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  max-width: 30rem;
  color: #6E6E73;
  margin-top: 0.5rem;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .emotion-22 {
    font-size: 0.9375rem;
    line-height: 1.125rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-22 {
    font-size: 0.875rem;
    line-height: 1.125rem;
  }
}

.emotion-14 {
  width: 88px;
  display: inline-block;
  vertical-align: top;
  margin: 8px 0 0 8px;
}

@media (min-width:25rem) {
  .emotion-14 {
    width: 109px;
  }
}

@media (min-width:37.5rem) {
  .emotion-14 {
    width: 178px;
    margin: 0;
  }
}

@media (min-width:63rem) {
  .emotion-14 {
    width: 100%;
    margin: 0;
  }
}

.emotion-18 {
  color: unset;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-18:before {
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  content: '';
  overflow: hidden;
  z-index: 1;
}

.emotion-18:visited .podcast-promo--visited {
  color: #AEAEB5;
}

.emotion-18:focus .podcast-promo--focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-24 > svg {
  width: 16px;
  height: 16px;
  fill: currentColor;
  position: relative;
  bottom: 2px;
  right: 3px;
}

.emotion-26 {
  font-size: 0.9375rem;
  line-height: 1.25rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  color: #6E6E73;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .emotion-26 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-26 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

.emotion-30 {
  position: relative;
  background-color: #FFFFFF;
}

.emotion-30:hover .podcast-promo--hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-32 {
  background-color: #F2F2F2;
  padding: 1rem;
}

.emotion-12 {
  position: relative;
  height: 0;
  overflow: hidden;
  background-color: #F2F2F2;
  background-position: center center;
  background-repeat: no-repeat;
  background-size: 60px 17px;
  padding-bottom: 100%;
  width: 100%;
  background-image: url(data:image/svg+xml;base64,PD94bWwgdmVyc2lvbj0iMS4wIiBlbmNvZGluZz0iVVRGLTgiPz48c3ZnIHdpZHRoPSI0NzkiIGhlaWdodD0iMTM2IiB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciPjxnIGZpbGw9Im5vbmUiIGZpbGwtcnVsZT0iZXZlbm9kZCI+PGcgZmlsbD0iI0Q1RDBDRCI+PGc+PHBhdGggZD0iTTQ0OS41NTYgOTEuNTUzbC0yLjMxIDEuNDFjLTExLjE2NyA2LjgxOC0yMy4zMTMgMTAuNDc0LTM0LjM0NiAxMC40Ny0yMy42MS0uMDktMzkuMTYzLTE0LjA4My0zOS4yMjctMzQuNDUzLjAzLTE5LjkxOCAxNi4yNy0zNC42NjMgMzguNjMzLTM0LjcxOCAxMS4zODcuMDEgMjEuNzAzIDIuOTU0IDMzLjk2MiA5LjY3MmwyLjI1MSAxLjI0di0xOC4xOWwtLjk2Mi0uMzc3Yy0xMy44MjQtNS40NTgtMjQuNTMtNy44OS0zNS4xMDMtNy44ODQtMTYuMzQ2LS4wMDYtMzAuNTMzIDUuMzk0LTQwLjYzNyAxNC41NTctMTAuMTA1IDkuMTYzLTE2LjEwNiAyMi4xMDItMTYuMDk5IDM2Ljk1My4wMDggMTAuMzQ4IDQuMjc5IDIyLjQ4IDEzLjQyIDMyLjEwNSA5LjEyMSA5LjYyOCAyMy4xNjUgMTYuNjQ4IDQyLjQzIDE2LjYzOWguMDYzYzE1Ljk4IDAgMjcuMDYyLTMuNTYzIDM3LjA3NC04LjQ5MmwuODUxLS40MTRWOTEuNTUzek0zMzQgMTM1LjY5N2gxNDQuMTk1VjBIMzM0djEzNS42OTd6Ii8+PHBhdGggZD0iTTI3Ni45MzcgODkuOTY4Yy4wNDEtMTIuMzMtOC4xNzEtMjEuNjk2LTIxLjMwOC0yNS4zIDMuNTQ0LTEuODA5IDYuMzUtNC4wMjMgOC40MDQtNi43MjcgMi43NS0zLjYyMiA0LjA2MS04LjA2NCA0LjA0Ni0xMy4yMzUuMDE1LTYuMzU5LTIuNDg2LTEyLjgzOS03Ljg1OC0xNy42ODctNS4zNzItNC44NDctMTMuNTI2LTcuOTk3LTI0LjY1NC03Ljk5MUgyMDQuODN2OTcuNzI4aDM2LjA3M2MxMi44NyAwIDIxLjkwNi0zLjQ4MiAyNy43MjItOC42NSA1LjgxOC01LjE1NSA4LjMyLTExLjkxIDguMzEyLTE4LjEzOHpNMTY3IDEzNS42OThoMTQ0LjE5N1YwSDE2N3YxMzUuNjk3eiIvPjxwYXRoIGQ9Ik0xMDkuOTM3IDg5Ljk2OGMuMDQxLTEyLjMzLTguMTcxLTIxLjY5Ni0yMS4zMDgtMjUuMyAzLjU0NC0xLjgwOSA2LjM1LTQuMDIzIDguNDA0LTYuNzI3IDIuNzUtMy42MjIgNC4wNjEtOC4wNjQgNC4wNDYtMTMuMjM1LjAxNS02LjM1OS0yLjQ4Ni0xMi44MzktNy44NTgtMTcuNjg3LTUuMzcyLTQuODQ3LTEzLjUyNi03Ljk5Ny0yNC42NTQtNy45OTFIMzcuODN2OTcuNzI4aDM2LjA3M2MxMi44NyAwIDIxLjkwNi0zLjQ4MiAyNy43MjItOC42NSA1LjgxOC01LjE1NSA4LjMyLTExLjkxIDguMzEyLTE4LjEzOHpNMCAxMzUuNjk4aDE0NC4xOTdWMEgwdjEzNS42OTd6Ii8+PHBhdGggZD0iTTI1OC42NjIgODguMTk4Yy0uMDEzIDMuMjI5LTEuMDA3IDYuNDc1LTMuODk2IDkuMDExLTIuODg0IDIuNTM3LTcuODczIDQuNDYzLTE2LjEzMyA0LjQ2M0gyMjJWNzVoMTUuODkzYzcuNDExIDAgMTIuNjcgMS41MDIgMTUuOTY1IDMuODUgMy4yODkgMi4zNjIgNC43NzYgNS40NjMgNC44MDQgOS4zNDgiLz48cGF0aCBkPSJNOTEuNjYyIDg4LjE5OGMtLjAxMyAzLjIyOS0xLjAwNyA2LjQ3NS0zLjg5NiA5LjAxMS0yLjg4NCAyLjUzNy03Ljg3NCA0LjQ2My0xNi4xMzMgNC40NjNINTVWNzVoMTUuODkyYzcuNDEyIDAgMTIuNjcyIDEuNTAyIDE1Ljk2NiAzLjg1IDMuMjg5IDIuMzYyIDQuNzc2IDUuNDYzIDQuODA0IDkuMzQ4Ii8+PHBhdGggZD0iTTI0NS4xODYgNTUuNzljMy4wOTYtMi4yMzcgNC41OS01LjM4NiA0LjYxMy0xMC4xMjQtLjAxNS0zLjI1LS45NDMtNi4wMzMtMy4yODEtOC4xMTEtMi4zNDYtMi4wNzgtNi4zMy0zLjU1NS0xMi43NTQtMy41NTVIMjIydjI1LjI3NWg4LjA3NmM2Ljk4OC4wMDQgMTEuOTk4LTEuMjQzIDE1LjExLTMuNDg2Ii8+PHBhdGggZD0iTTc4LjE4NiA1NS43OWMzLjA5Ni0yLjIzNyA0LjU5LTUuMzg2IDQuNjEzLTEwLjEyNC0uMDE1LTMuMjUtLjk0My02LjAzMy0zLjI4Mi04LjExMUM3Ny4xNzIgMzUuNDc3IDczLjE4OCAzNCA2Ni43NjQgMzRINTV2MjUuMjc1aDguMDc2YzYuOTg4LjAwNCAxMS45OTgtMS4yNDMgMTUuMTEtMy40ODYiLz48L2c+PC9nPjwvZz48L3N2Zz4K);
}

@media (min-width:25rem) {
  .emotion-12 {
    background-size: 77px 22px;
  }
}

@media (min-width:63rem) {
  .emotion-12 {
    background-size: 93px 27px;
  }
}

.emotion-16 {
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
  margin: 0;
}

.emotion-38 {
  margin: 10px auto;
  max-width: 1008px;
}

.emotion-2 {
  vertical-align: top;
  display: inline-block;
  max-width: 1000px;
  padding: 0 10px;
  width: 100%;
}

@media (min-width:63rem) {
  .emotion-2 {
    width: 66%;
  }
}

.emotion-0 {
  height: 1000px;
  margin: 20px 0;
  background-color: #404040;
  font-family: sans-serif;
  color: #757575;
  font-size: 20px;
  line-height: 1;
  text-align: center;
  padding-top: 490px;
}

.emotion-36 {
  display: inline-block;
  padding: 0 10px;
  width: 100%;
}

@media (min-width:63rem) {
  .emotion-36 {
    width: 33%;
  }
}

.emotion-4 {
  height: 200px;
  margin: 20px 0;
  background-color: #404040;
  font-family: sans-serif;
  color: #757575;
  font-size: 20px;
  line-height: 1;
  text-align: center;
  padding-top: 90px;
}

<div>
  <div
    class="emotion-38 emotion-39"
  >
    <div
      class="emotion-2 emotion-3"
    >
      <div
        class="emotion-0 emotion-1"
        height="1000"
      >
        Main Content
      </div>
    </div>
    <div
      class="emotion-36 emotion-37"
    >
      <div
        class="emotion-4 emotion-1"
        height="200"
      >
        Content Above
      </div>
      <section
        class="emotion-32 emotion-33"
        role="region"
      >
        <div
          class="emotion-10 emotion-11"
        >
          <i
            class="emotion-6 emotion-7"
          />
          <h2
            class="emotion-8 emotion-9"
          >
            Подкаст
          </h2>
        </div>
        <div
          class="emotion-30 emotion-31"
        >
          <figure
            class="emotion-14 emotion-15"
          >
            <div
              class="emotion-12 emotion-13"
            >
              <img
                alt="Что это было?"
                src="http://ichef.bbci.co.uk/images/ic/3000x3000/p0776f5z.jpg"
                width="100%"
              />
            </div>
          </figure>
          <div
            class="emotion-28 emotion-29"
          >
            <h3
              class="emotion-20 emotion-21"
            >
              <a
                class="emotion-18 emotion-19"
                href="https://www.bbc.com/russian/media-47937790"
              >
                <span
                  class="podcast-promo--hover podcast-promo--focus podcast-promo--visited"
                >
                  Что это было?
                </span>
                <span
                  class="emotion-16 emotion-17"
                >
                  , Episodes
                </span>
              </a>
            </h3>
            <p
              class="emotion-22 emotion-23"
            >
              Мы быстро, просто и понятно объясняем, что случилось, почему это важно и что будет дальше. Никаких ненужных подробностей и передергиваний - только факты и взвешенная аналитика.
            </p>
            <span
              aria-hidden="true"
            >
              <i
                class="emotion-24 emotion-25"
              />
              <span
                class="emotion-26 emotion-27"
              >
                эпизоды
              </span>
            </span>
          </div>
        </div>
      </section>
      <div
        class="emotion-4 emotion-1"
        height="200"
      >
        Content Below
      </div>
    </div>
  </div>
</div>
`;

exports[`Podcast Promo Title should match snapshot 1`] = `
.emotion-4 {
  margin: 0 0 1rem;
}

.emotion-0 > svg {
  margin-left: 0;
  width: 22px;
  height: 22px;
  fill: currentColor;
  position: relative;
  bottom: 5px;
  right: 3px;
}

.emotion-2 {
  font-size: 1.125rem;
  line-height: 1.375rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  display: inline;
  color: #222222;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .emotion-2 {
    font-size: 1.125rem;
    line-height: 1.375rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-2 {
    font-size: 1.25rem;
    line-height: 1.5rem;
  }
}

<div>
  <div
    class="emotion-4 emotion-5"
  >
    <i
      class="emotion-0 emotion-1"
    />
    <h2
      class="emotion-2 emotion-3"
    >
      Content
    </h2>
  </div>
</div>
`;

exports[`Podcast Promo card-call-to-action should match snapshot 1`] = `
.emotion-0 > svg {
  width: 16px;
  height: 16px;
  fill: currentColor;
  position: relative;
  bottom: 2px;
  right: 3px;
}

.emotion-2 {
  font-size: 0.9375rem;
  line-height: 1.25rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  color: #6E6E73;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .emotion-2 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-2 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

<div>
  <span
    aria-hidden="true"
  >
    <i
      class="emotion-0 emotion-1"
    />
    <span
      class="emotion-2 emotion-3"
    >
      Click Me
    </span>
  </span>
</div>
`;
